--- a/force-app/main/default/classes/Lwc_Wire2_SearchText.cls
+++ b/force-app/main/default/classes/Lwc_Wire2_SearchText.cls
@@ -1,7 +1,8 @@
 public with sharing class Lwc_Wire2_SearchText {
     @AuraEnabled(cacheable=true)
     public static List<Contact> searchTe(String searchText) {
-        String key='%'+searchText+'%';
+        String key='%'+searchText+'%'; 
+        //kjdshff
         return [select id,FirstName,LastName,Email,Phone from Contact where LastName LIKE :key];
     }
 }
